--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="supertokensIdRefreshKey">supertokens-android-idrefreshtoken-key</string>
     <string name="app_name">SuperTokens Android</string>
     <string name="supertokensIdRefreshCookieKey">sIdRefreshToken</string>
+    <string name="supertokensAntiCSRFHeaderKey">anti-csrf</string>
+    <string name="supertokensSetCookieHeaderKey">Set-Cookie</string>
 </resources>
