--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="supertokensIdRefreshCookieKey">sIdRefreshToken</string>
     <string name="supertokensAntiCSRFHeaderKey">anti-csrf</string>
     <string name="supertokensSetCookieHeaderKey">Set-Cookie</string>
-
     <string name="superTokensCookieSharedPrefsKey">supertokens-cookie-shared-prefs</string>
     <string name="superTokensCookieNameStoreKey">supertokens-cookie-names</string>
+    <string name="supertokensUsageModeOkhttp">supertokens-usage-okhttp</string>
+    <string name="supertokensUsageModeURLConn">supertokens-usage-httpurlconnection</string>
 </resources>
