--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="supertokensAntiCSRFTokenKey">supertokens-android-anticsrf-key</string>
     <string name="supertokensSharedPrefsKey">supertokens-android-shared-preferences</string>
-    <string name="supertokensIdRefreshKey">supertokens-android-idrefreshtoken-key</string>
+    <string name="supertokensIdRefreshSharedPrefsKey">supertokens-android-idrefreshtoken-key</string>
     <string name="app_name">SuperTokens Android</string>
-    <string name="supertokensIdRefreshCookieKey">sIdRefreshToken</string>
+    <string name="supertokensIdRefreshHeaderKey">id-refresh-token</string>
     <string name="supertokensAntiCSRFHeaderKey">anti-csrf</string>
-    <string name="supertokensSetCookieHeaderKey">Set-Cookie</string>
     <string name="superTokensCookieSharedPrefsKey">supertokens-cookie-shared-prefs</string>
     <string name="superTokensCookieNameStoreKey">supertokens-cookie-names</string>
     <string name="supertokensUsageModeOkhttp">supertokens-usage-okhttp</string>
